# student-roster

./: Cargo.toml  Makefile  README.md
database/: docker-compose.yml
database/init/: init.sql
src/: db.rs  main.rs
