[package]
name = "roster"
version = "0.1.0"
authors = ["Jeffrey Lym <jeffreyalym@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
anyhow = "1.0"
deadpool-postgres = "0.5.0"
tokio-postgres = "0.5.1"
tokio = { version = "0.2", features = ["full"] }
